--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "react-hook-form": "^7.35.0"
+    "package.json": "^2.0.1",
+    "react-hook-form": "^7.35.0",
+    "yarn": "^1.22.19"
   }
 }
