--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "@material-ui/core": "^4.12.4",
-    "classnames": "^2.3.2"
+    "classnames": "^2.3.2",
+    "react-router-dom": "^6.3.0",
+    "sass": "^1.54.9"
   }
 }
