--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.35.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
+    "sass": "^1.54.9",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
