--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.35.0",
     "react-icons": "^4.4.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "watch": "^0.13.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
