--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.10.9",
+    "@mui/x-data-grid": "^5.17.6",
     "classnames": "^2.3.2",
     "react-circular-progressbar": "^2.1.0",
     "react-router-dom": "^6.3.0",
